--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
+	<meta http-equiv="refresh" content="0;URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" />
 
     <!-- Website Title -->
     <title>Aria - Business HTML Landing Page Template</title>
